# elixir_ncnn

./: .gitignore  CMakeLists.txt  Makefile  README.md  guess_best_ncnn_toolchain.sh  mix.exs
c_src/: helper.hpp  mobile_net_v3_ssdlite.hpp  ncnn.cpp  nif_utils.hpp  test_neon.cpp
c_src/models/: mobile_net.hpp
config/: config.exs
lib/: elixir_ncnn.ex  ncnn_mobile_net_v3_ssd_lite.ex  ncnn_net.ex  ncnn_nif.ex
lib/models/: mobile_net.ex  mobile_net_v3_ssdlite.ex
nerves/: toolchain.cmake
test/: elixir_ncnn_test.exs
